--- a/car-price-prediction.ipynb
+++ b/car-price-prediction.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# 🚗 Lab 1 – Car Price Prediction\n",
+    "# 🚗 Car Price Prediction\n",
     "---"
    ]
   },
